--- a/src/views/pages/booking/success.ejs
+++ b/src/views/pages/booking/success.ejs
@@ -56,7 +56,7 @@
                         <h3><%= data[0].room_class %></h3>
                         <div>
                             <span class="material-symbols-outlined">local_atm</span>
-                            <p>Tổng giá: VND <%= data[0].book_room_cost_after %></p>
+                            <p>Tổng giá: VND <%= data[0].book_cost_after %></p>
                         </div>
                         <div>
                             <span class="material-symbols-outlined">calendar_month</span>
