--- a/src/views/components/search-result-sale.ejs
+++ b/src/views/components/search-result-sale.ejs
@@ -9,14 +9,12 @@
     <div class="result-block__main">
       <img src="/imgs/branchs/apartment.png" alt="apartment" class="result-block__picture">
       <div class="result-block__content">
-        <p class="result-block__name">acco.acco_name</p>
+        <p class="result-block__name"><%= result.acco_name %></p>
         <!-- Đánh giá 5 sao -->
         <div class="result-block__rate-star">
-          <span class="material-symbols-outlined">grade</span>
-          <span class="material-symbols-outlined">grade</span>
-          <span class="material-symbols-outlined">grade</span>
-          <span class="material-symbols-outlined">grade</span>
-          <span class="material-symbols-outlined">grade</span>
+          <% for (let i = 0; i < result.acco_star; i++) { %>
+            <span class="material-symbols-outlined">star</span>
+          <% } %>
         </div>
         <div class="result-block__extensions">
           <a href="#" target="blank" class="result-block__map">Xem trên bản đồ</a>
@@ -29,8 +27,15 @@
           </div>
         </div>
         <div class="result-block__room-details">
-          <p class="result-block__room-detais__content">Phòng Deluxe giường đôi nhìn ra biển</p>
-          <p>1 giường đôi</p>
+          <p class="result-block__room-detais__content"><%= result.room_type %> 
+            <%= result.room_class %> nhìn ra biển</p>
+          <p>
+            <% if(result.room_double_bed) { %>
+              <%= result.room_double_bed %> giường đôi
+            <% } else { %>
+              <%= result.room_single_bed %> giường đơn
+            <% } %>
+          </p>
           <div class="result-block__room-detais__cancel-policy">
             <span class="material-symbols-outlined">check</span>
             <p class="cancel-policy__content">Miễn phí hủy</p>
@@ -47,17 +52,24 @@
     <div class="result-block__infor">
       <div class="result-block__cus-rate">
         <div class="result-block__cus-rate__content">
-          <p class="result-block__cus-rate__main-content">Trên cả tuyệt vời</p>
-          <p class="result-block__cus-rate__sub-content">118 đánh giá</p>
+          <p class="result-block__cus-rate__main-content">
+            <% if(result.room_avg_rating >= 9 && result.room_avg_rating <= 10) { %> Trên cả tuyệt vời
+            <% } else if(result.room_avg_rating >= 8 && result.room_avg_rating <= 10) { %> Xuất sắc
+            <% } else if(result.room_avg_rating >= 7 && result.room_avg_rating <= 10) { %> Rất tốt
+            <% } else if(result.room_avg_rating >= 6 && result.room_avg_rating <= 10) { %> Hài lòng
+            <% } else { %> Phù hợp
+            <% } %>
+          </p>
+          <p class="result-block__cus-rate__sub-content"><%= result.room_count_rating %> đánh giá</p>
         </div>
         <div class="result-block__cus-rate__point">
-          <p>10</p>
+          <p><%= result.room_avg_rating %></p>
         </div>
       </div>
       <div class="result-block__price">
-        <p class="result-block__option">1 đêm, 2 người lớn</p>
-        <p class="result-block__origin-price">VND 1.350.000</p>
-        <p class="result-block__discount-price">VND 1.180.000</p>
+        <p class="result-block__option">1 đêm, <%= result.room_max_adult %> người lớn</p>
+        <p class="result-block__origin-price">VND <%= result.room_cost * (1 - result.room_discount) %></p>
+        <p class="result-block__discount-price">VND <%= result.room_cost %></p>
         <label for="result-block__discount-price" class="result-block__label">Đã gồm thuế và phí</label>
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
           <a href="#" id="select-button" type="submit" class="btn form__submit">Xem ngay</a>
