--- a/src/views/pages/booking/cancellation.ejs
+++ b/src/views/pages/booking/cancellation.ejs
@@ -14,19 +14,19 @@
 <body>
     <%- include('../../partials/header-small') %>
 
-    <%- include('../../partials/nav-tree', { nav_tree__data }) %>
+    <%# include('../../partials/nav-tree', { nav_tree__data }) %>
 
     <main class="content-container">
         <section class="main-content">
             <div class="cancel-status">
-                <h1>Đặt phòng của bạn ở Hội An đã được <span>hủy miễn phí</span>
+                <h1>Đặt phòng của bạn ở <%= data[0].city_name %> đã được <span>hủy miễn phí</span>
                 </h1>
             </div>
 
             <div class="cancel-description">
                 <div class="cancel-description__item">
                     <span class="material-symbols-outlined">done</span>
-                    <h3>Xác nhận hủy phòng đang được gửi tới 21520796@gm.uit.edu.vn.</p>
+                    <h3>Xác nhận hủy phòng đang được gửi tới <%= data[0].book_email %>.</p>
                     </h3>
                 </div>
                 <div class="cancel-description__item">
@@ -36,7 +36,7 @@
                 </div>
                 <div class="cancel-description__item">
                     <span class="material-symbols-outlined">done</span>
-                    <h3>Nếu có bất kỳ phát sinh nào về chi phí, hãy liên hệ với <a class="hotel" href="https://daa.uit.edu.vn/">The Soul Hotel</a> để biết thêm thông tin.</h3>
+                    <h3>Nếu có bất kỳ phát sinh nào về chi phí, hãy liên hệ với <a class="hotel" href="https://daa.uit.edu.vn/"><%= data[0].acco_name %></a> để biết thêm thông tin.</h3>
                 </div>
             </div>
             <div class="cancel__button">
@@ -52,14 +52,9 @@
                     <img src="../../public/imgs/milo.jpg" alt="">
                     <div class="rating">
                         <p><%= data[0].acco_name %></p>
-                        <% data.forEach (function(stars){ %>
-                        <span class="material-symbols-outlined">star</span>
-                        <% }) %>
-                        <!-- <span class="material-symbols-outlined">star</span>
-                        <span class="material-symbols-outlined">star</span>
-                        <span class="material-symbols-outlined">star</span>
-                        <span class="material-symbols-outlined">star</span>
-                        <span class="material-symbols-outlined">star</span> -->
+                        <% for (let i = 0; i < data[0].acco_star; i++) { %>
+                            <span class="material-symbols-outlined">star</span>
+                          <% } %>
                     </div>
                 </div>
                 <div class="cancel-summary__content">
