update logout function

--- a/src/views/pages/account/card-fill.ejs
+++ b/src/views/pages/account/card-fill.ejs
@@ -36,7 +36,7 @@
             <hr />
 
             <div class="aside-content__item logout-btn">
-                <p>Đăng xuất</p>
+                <p id="logoutButton">Đăng xuất</p>
             </div>
             <div class="popup">
                 <div class="popup__main">
