--- a/src/views/pages/search/results.ejs
+++ b/src/views/pages/search/results.ejs
@@ -55,11 +55,11 @@
         <div class="filter-sidebar__type">
           <p class="filter-sidebar__content">Loại chỗ ở:</p>
           <div class="form-check">
-            <input type="checkbox" name="acco_type" class="form-check-input acco_type" value="hotel">
+            <input type="checkbox" name="acco_type" class="form-check-input acco-type" value="hotel">
             <label class="form-check-label">Khách sạn</label>
           </div>
           <div class="form-check">
-            <input type="checkbox" name="acco_type" class="form-check-input acco_type" value="resort">
+            <input type="checkbox" name="acco_type" class="form-check-input acco-type" value="resort">
             <label class="form-check-label">Biệt thự</label>
           </div>
           <div class="form-check">
@@ -75,22 +75,22 @@
         <div class="filter-sidebar__cus-rate">
           <p class="filter-sidebar__content">Đánh giá của khách hàng:</p>
           <div class="form-check">
-            <input type="checkbox" name="rating_point" class="form-check-input rating_point" value="9+">
+            <input type="checkbox" name="rating_point" class="form-check-input rating-point" value="9+">
             <label class="form-check-label__score">9+</label>
             <label class="form-check-label">Trên cả tuyệt vời</label>
           </div>
           <div class="form-check">
-            <input type="checkbox" name="rating_point" class="form-check-input rating_point" value="8+">
+            <input type="checkbox" name="rating_point" class="form-check-input rating-point" value="8+">
             <label class="form-check-label__score">8+</label>
             <label class="form-check-label">Xuất sắc</label>
           </div>
           <div class="form-check">
-            <input type="checkbox" name="rating_point" class="form-check-input rating_point" value="7+">
+            <input type="checkbox" name="rating_point" class="form-check-input rating-point" value="7+">
             <label class="form-check-label__score">7+</label>
             <label class="form-check-label">Rất tốt</label>
           </div>
           <div class="form-check">
-            <input type="checkbox" name="rating_point" class="form-check-input rating_point" value="6+">
+            <input type="checkbox" name="rating_point" class="form-check-input rating-point" value="6+">
             <label class="form-check-label__score">6+</label>
             <label class="form-check-label">Hài lòng</label>
           </div>
@@ -99,15 +99,15 @@
         <div class="filter-sidebar__bed-type">
           <p class="filter-sidebar__content">Loại giường:</p>
           <div class="form-check">
-            <input type="checkbox" name="bed_type" class="form-check-input bed_type" value="Giường đơn">
+            <input type="checkbox" name="bed_type" class="form-check-input bed-type" value="Giường đơn">
             <label class="form-check-label">Giường đơn</label>
           </div>
           <div class="form-check">
-            <input type="checkbox" name="bed_type" class="form-check-input bed_type" value="Giường đôi">
+            <input type="checkbox" name="bed_type" class="form-check-input bed-type" value="Giường đôi">
             <label class="form-check-label">Giường đôi</label>
           </div>
           <div class="form-check">
-            <input type="checkbox" name="bed_type" class="form-check-input bed_type" value="Giường tầng">
+            <input type="checkbox" name="bed_type" class="form-check-input bed-type" value="Giường tầng">
             <label class="form-check-label">Giường tầng</label>
           </div>
         </div>
@@ -144,7 +144,7 @@
           <p class="filter-sidebar__content">Đánh giá sao:</p>
           <p class="filter-sidebar__note">Đánh giá này do chỗ nghĩ cung cấp và thường được đánh giá bởi tổ chức đánh giá khách sạn uy tín hoặc một bên thứ ba khác.</p>
           <div class="form-check">
-            <input type="checkbox" name="acco_star" class="form-check-input acco_star" value=5>
+            <input type="checkbox" name="acco_star" class="form-check-input acco-star" value=5>
             <label class="form-check-label">
               <span class="material-symbols-outlined">grade</span>
               <span class="material-symbols-outlined">grade</span>
@@ -154,7 +154,7 @@
             </label>
           </div>
           <div class="form-check">
-            <input type="checkbox" name="acco_star" class="form-check-input acco_star" value=4>
+            <input type="checkbox" name="acco_star" class="form-check-input acco-star" value=4>
             <label class="form-check-label">
               <span class="material-symbols-outlined">grade</span>
               <span class="material-symbols-outlined">grade</span>
@@ -163,7 +163,7 @@
             </label>
           </div>
           <div class="form-check">
-            <input type="checkbox" name="acco_star" class="form-check-input acco_star" value=3>
+            <input type="checkbox" name="acco_star" class="form-check-input acco-star" value=3>
             <label class="form-check-label">
               <span class="material-symbols-outlined">grade</span>
               <span class="material-symbols-outlined">grade</span>
@@ -171,20 +171,20 @@
             </label>
           </div>
           <div class="form-check">
-            <input type="checkbox" name="acco_star" class="form-check-input acco_star" value=2>
+            <input type="checkbox" name="acco_star" class="form-check-input acco-star" value=2>
             <label class="form-check-label">
               <span class="material-symbols-outlined">grade</span>
               <span class="material-symbols-outlined">grade</span>
             </label>
           </div>
           <div class="form-check">
-            <input type="checkbox" name="acco_star" class="form-check-input acco_star" value=1>
+            <input type="checkbox" name="acco_star" class="form-check-input acco-star" value=1>
             <label class="form-check-label">
               <span class="material-symbols-outlined">grade</span>
             </label>
           </div>
           <div class="form-check">
-            <input type="checkbox" name="acco_star" class="form-check-input acco_star" value=null>
+            <input type="checkbox" name="acco_star" class="form-check-input acco-star" value=null>
             <label class="form-check-label">Chưa có đánh giá</label>
           </div>
         </div>
@@ -192,11 +192,11 @@
         <div class="filter-sidebar__cancel">
           <p class="filter-sidebar__content">Chính sách hủy phòng:</p>
           <div class="form-check">
-            <input type="checkbox" name="acco_fea" class="form-check-input acco_fea" value=1>
+            <input type="checkbox" name="acco_fea" class="form-check-input acco-fea" value=1>
             <label class="form-check-label">Miễn phí hủy</label>
           </div>
           <div class="form-check">
-            <input type="checkbox" name="acco_fea" class="form-check-input acco_fea" value=2>
+            <input type="checkbox" name="acco_fea" class="form-check-input acco-fea" value=2>
             <label class="form-check-label">Không cần thanh toán trước</label>
           </div>
         </div>
@@ -275,10 +275,10 @@
             <p class="search-results__filter__content">Giá</p>
             <span class="material-symbols-outlined dropdown-button">keyboard_arrow_down</span>
             <div class="dropdown-content">
-              <input type="radio" id="costZA" class="sort cost" name="cost" value="Cao đến thấp" />
-              <label for="costZA" onclick="selectRadio('costZA')" class="sort-label" >Cao đến thấp</label>
-              <input type="radio" id="costAZ" class="sort cost" name="cost" value="Thấp đến cao" />
-              <label for="costAZ" onclick="selectRadio('costAZ')" class="sort-label">Thấp đến cao</label>
+              <input type="radio" id="cost-ZA" class="sort cost" name="cost" value="Cao đến thấp" />
+              <label for="cost-ZA" onclick="selectRadio('cost-ZA')" class="sort-label" >Cao đến thấp</label>
+              <input type="radio" id="cost-AZ" class="sort cost" name="cost" value="Thấp đến cao" />
+              <label for="cost-AZ" onclick="selectRadio('cost-AZ')" class="sort-label">Thấp đến cao</label>
             </div>
           </div>
         </div>
@@ -288,10 +288,10 @@
             <p class="search-results__filter__content">Được đánh giá hàng đầu</p>
             <span class="material-symbols-outlined dropdown-button">expand_more</span>
             <div class="dropdown-content">
-              <input type="radio" id="accoStarZA" class="sort accoStar" name="accoStar" value="Cao đến thấp" />
-              <label for="accoStarZA" onclick="selectRadio('accoStarZA')" class="sort-label">Cao đến thấp</label>
-              <input type="radio" id="accoStarAZ" class="sort accoStar" name="accoStar" value="Thấp đến cao" />
-              <label for="accoStarAZ" onclick="selectRadio('accoStarAZ')" class="sort-label">Thấp đến cao</label>
+              <input type="radio" id="acco-star-ZA" class="sort acco-star-sort" name="acco_star" value="Cao đến thấp" />
+              <label for="acco-star-ZA" onclick="selectRadio('acco-star-ZA')" class="sort-label">Cao đến thấp</label>
+              <input type="radio" id="acco-star-AZ" class="sort acco-star-sort" name="acco_star" value="Thấp đến cao" />
+              <label for="acco-star-AZ" onclick="selectRadio('acco-star-AZ')" class="sort-label">Thấp đến cao</label>
             </div>
           </div>
         </div>
@@ -301,10 +301,10 @@
             <p class="search-results__filter__content">Được đánh giá nhiều nhất</p>
             <span class="material-symbols-outlined dropdown-button">expand_more</span>
             <div class="dropdown-content">
-              <input type="radio" id="countRatingZA" class="sort countRating" name="countRating" value="Cao đến thấp" />
-              <label for="countRatingZA" onclick="selectRadio('countRatingZA')" class="sort-label">Cao đến thấp</label>
-              <input type="radio" id="countRatingAZ" class="sort countRating" name="countRating" value="Thấp đến cao" />
-              <label for="countRatingAZ" onclick="selectRadio('countRatingAZ')" class="sort-label">Thấp đến cao</label>
+              <input type="radio" id="count-rating-ZA" class="sort count-rating" name="count_rating" value="Cao đến thấp" />
+              <label for="count-rating-ZA" onclick="selectRadio('count-rating-ZA')" class="sort-label">Cao đến thấp</label>
+              <input type="radio" id="count-rating-AZ" class="sort count-rating" name="count_rating" value="Thấp đến cao" />
+              <label for="count-rating-AZ" onclick="selectRadio('count-rating-AZ')" class="sort-label">Thấp đến cao</label>
             </div>
           </div>
         </div>
