--- a/src/views/components/cancel-popup.ejs
+++ b/src/views/components/cancel-popup.ejs
@@ -1,3 +1,4 @@
+<form id="cancel-form" action="/booking/cancellation">
 <div class="modal">
     <div class="cancel-container">
         <div class="cancel">
@@ -83,3 +84,4 @@
         </div>
     </div>
 </div>
+</form>
