Update addReview in room

--- a/src/views/pages/booking/detail.ejs
+++ b/src/views/pages/booking/detail.ejs
@@ -108,10 +108,10 @@
                                                     </div>
                                                     <div class="section--popup">
                                                         <div class="popup-profile">
-                                                            <img src="../../img/row-1-column-6.png" alt="" />
+                                                            <img src="/imgs/user/<%=user.avatar%>" alt="" />
                                                             <div class="aside__content--detail">
                                                                 <p style="font-weight: 500; margin: 12px 0 0 0">
-                                                                    21520796@gm.uit.edu.vn
+                                                                    <%= user.email %>
                                                                 </p>
                                                                 <p style="font-size: 12px"><i>Đăng công khai</i></p>
                                                             </div>
